--- a/src/app.scss
+++ b/src/app.scss
@@ -8,13 +8,74 @@
 // Global SCSS styling
 // @see https://docs.nativescript.org/ui/styling
 
+.header {
+  horizontal-align: center;
+  font-size: 20;
+  font-weight: 600;
+  margin-bottom: 40;
+  text-align: center;
+  color: #5a4ed5;
+}
+
+.btn-primary {
+  margin: 10 5 8 5;
+}
 
 .page {
     margin-top: 24;
     align-items: center;
     flex-direction: column;
   }
+
+  .page {
+    align-items: center;
+    flex-direction: column;
+  }
   
+  .form {
+    margin-left: 30;
+    margin-right: 30;
+    flex-grow: 2;
+    vertical-align: middle;
+  }
+  .logo {
+    margin-bottom: 12;
+    height: 90;
+    font-weight: bold;
+  }
+  
+  .input-field {
+    margin-bottom: 15;
+  }
+  .input {
+    font-size: 16;
+    placeholder-color: #a8a8a8;
+  }
+  .input:disabled {
+    background-color: white;
+    opacity: 0.5;
+  }
+  
+  .login-label {
+    horizontal-align: center;
+    color: #fffdfb;
+    background-color: #000000;
+    border-radius: 5;
+    padding: 10;
+    font-size: 10;
+  }
+  .sign-up-label {
+    horizontal-align: center;
+    color: #a8123c;
+    background-color: #dae269;
+    border-radius: 5;
+    padding: 10;
+    font-size: 10;
+  }
+  .bold {
+    color: #000000;
+  }
+
   .btn-primary {
     height: 50;
     background-color: #1962eb;
