💄 UI: Agregando menu

--- a/src/app.scss
+++ b/src/app.scss
@@ -17,6 +17,11 @@
   color: #5a4ed5;
 }
 
+ActionBar {
+  background-color: #53ba82;
+  color: #ffffff;
+}
+
 .btn-primary {
   margin: 10 5 8 5;
 }
