🚧 PROGRESS: Agregando componentes de seccion y agencia

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,7 +20,7 @@
     font-weight: normal;
     font-size: 25;
     font-family: Arial;
-    text-transform: lowercase;
+    text-transform: uppercase;
   }
 
   .h4 {
@@ -28,7 +28,6 @@
     font-weight: normal;
     font-size: 20;
     font-family: Arial;
-    text-transform: lowercase;
   }
 
   .h5 {
@@ -36,7 +35,6 @@
     font-weight: normal;
     font-size: 18;
     font-family: Arial;
-    text-transform: lowercase;
   }
 
   .h6 {
@@ -44,7 +42,7 @@
     font-weight: normal;
     font-size: 16;
     font-family: Arial;
-    text-transform: lowercase;
+
   }
 
   .btn-primary {
