🚧 PROGRESS: configurando pantallas de tipos

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,7 @@
 @import './scss/forms.scss';
 @import './scss/styles.scss';
 @import './scss/components.scss';
+@import '~nativescript-filter-select/styles.css';
 
   .header {
     horizontal-align: center;
