🚧 PROGRESS: Ciclo de creación de Agencia

--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -38,3 +38,16 @@
     padding: 10;
     font-size: 10;
   }
+
+  .form {
+    margin-bottom: 20;
+    font-size: 16;
+    placeholder-color: rgb(223, 203, 203);
+    padding-left: 5;
+  }
+  
+  .selected {
+    background-color: rgb(194, 166, 166);
+    padding-top: 10;
+    padding-bottom: 10;
+  }
