--- a/src/app.scss
+++ b/src/app.scss
@@ -27,5 +27,22 @@
     flex-direction: column;
   }
   
+  .item {
+    margin-top: 15;
+    margin-left: 5;
+    margin-right: 5;
+    margin-bottom: 5;
+    padding-left: 20;
+    padding-bottom: 10;
+    background-color: rgb(221, 214, 214);
+  }
 
-
+  .title {
+    text-align: center;
+    color: white;
+  }
+  
+  
+  .label {
+    margin: 0;
+  }
